Issue 276:	Support a multi tenant.
Update issue 276
I added to fk_domain_id columns to role object.

git-svn-id: https://infoscoop.googlecode.com/svn/branches/3.0@692 d4e23b88-c782-11de-b6dc-25c59a28ecba